[package]
name = "triforces-demo"
version = "1.2.12"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
build = "build.rs"
description = "A 3D tech demo demonstrating some animation and Blinn-Phong shading."

[dependencies]
glfw = "0.25.0"
log = "0.4.6"
stb_image = "0.2.2"
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
lean_cgmath = { version = "0.6.0", git = "https://github.com/lambdaxymox/lean-cgmath" }
mini_obj = { git = "https://github.com/lambdaxymox/mini-obj" }

[build-dependencies]
gl_generator = "0.10.0"
mini_obj = { git = "https://github.com/lambdaxymox/mini-obj" }

[profile.dev]
debug = true

[features]
build_for_install = []
